test/libyul/yulSyntaxTests/eof/loadimmutable_shadowing.yul
{
    function loadimmutable(a) {}
}
// ====
// bytecodeFormat: >=EOFv1
// dialect: evm
// ----
// DeclarationError 5017: (6-34): The identifier "loadimmutable" is reserved and can not be used.
